# Seminar-Tasks

./: README.md
Seminar_Task_1/: AStrategy.h  BaseAlgorithmData.h  BaseLogger.cpp  BaseLogger.h  BasicStrategy.h  CMakeLists.txt  CustomBruteforceStrategy.h  CustomSortingStrategy.h  CuttingTask.cpp  CuttingTask.h  DefaultFactory.h  Definitions.cpp  Definitions.h  GreedyAlgorithm.cpp  GreedyAlgorithm.h  HTMLLogger.cpp  HTMLLogger.h  IAlgorithm.h  IAlgorithmData.h  ILogger.h  IStrategy.h  main.cpp
Seminar_Task_2/: ABoundStrategy.cpp  ABoundStrategy.h  BaseBranchingStrategy.cpp  BaseBranchingStrategy.h  BaseLogger.cpp  BaseLogger.h  BaseLowerBoundStrategy.cpp  BaseLowerBoundStrategy.h  BaseUpperBoundStrategy.cpp  BaseUpperBoundStrategy.h  CMakeLists.txt  CustomBranchingStrategy.cpp  CustomBranchingStrategy.h  CustomUpperBoundStrategy.cpp  CustomUpperBoundStrategy.h  DefaultFactory.cpp  DefaultFactory.h  Definitions.h  DeliveryTask.cpp  DeliveryTask.h  HTMLLogger.cpp  HTMLLogger.h  IBranchingStrategy.h  ILogger.h  ILowerBoundStrategy.h  IUpperBoundStrategy.h  VertexInfo.h  main.cpp
Seminar_Task_3/: BaseKnapsackTask.cpp  BaseKnapsackTask.h  BasicSortingStrategy.cpp  BasicSortingStrategy.h  CMakeLists.txt  CustomSortingStrategy.cpp  CustomSortingStrategy.h  DefaultFactory.cpp  DefaultFactory.h  Definitions.h  GreedyKnapsackTask.cpp  GreedyKnapsackTask.h  ISortingStrategy.h  OrderInfo.h  RecursiveKnapsackTask.cpp  RecursiveKnapsackTask.h  TableKnapsackTask.cpp  TableKnapsackTask.h  main.cpp
Seminar_Task_4/: AlgorithmFactory.cpp  AlgorithmFactory.h  BaseMinStoreSolver.cpp  BaseMinStoreSolver.h  CMakeLists.txt  Definitions.cpp  Definitions.h  EverybodyHasStorageSolver.cpp  EverybodyHasStorageSolver.h  FlowArc.h  FlowNetwork.cpp  FlowNetwork.h  FlowNetworkNode.cpp  FlowNetworkNode.h  FlowNode.cpp  FlowNode.h  FordFulkersonSolver.cpp  FordFulkersonSolver.h  IFlowTaskSolver.h  MinSizeStoreSolver.cpp  MinSizeStoreSolver.h  SortingMinStoreSolver.cpp  SortingMinStoreSolver.h  StoreSolver.cpp  StoreSolver.h  SupplierTask.cpp  SupplierTask.h  main.cpp
Seminar_Task_4/Tests/: task_4_01_n2_m2_T2.txt  task_4_02_n2_m2_T2.txt  task_4_03_n3_m2_T2.txt  task_4_04_n3_m2_T2.txt  task_4_05_n20_m15_T6.txt  task_4_06_n20_m15_T6.txt  task_4_07_n30_m15_T12.txt  task_4_08_n30_m15_T12.txt  task_4_09_n50_m20_T24.txt  task_4_10_n50_m20_T24.txt
Seminar_Task_5/: BaseReductionStrategy.cpp  BaseReductionStrategy.h  CMakeLists.txt  CenterRecalculationStrategy.cpp  CenterRecalculationStrategy.h  City.h  Cluster.cpp  Cluster.h  DefaultFactory.cpp  DefaultFactory.h  Definitions.cpp  Definitions.h  IReductionStrategy.h  MinClusterDistanceStrategy.cpp  MinClusterDistanceStrategy.h  Point.h  SalesmanTask.cpp  SalesmanTask.h  main.cpp
Seminar_Task_5/Tests/: task_5_01_n38.txt  task_5_02_n131.txt  task_5_03_n237.txt  task_5_04_n662.txt  task_5_05_n734.txt  task_5_06_n8246.txt
